# EpidemicAreaManagementSystem

./: CMakeLists.txt  后台指南.md
server/: CMakeLists.txt  common.h  helpFunc.cc  main.cpp
server/FuncInterface/: Quarantine.cc  equipment.cc  login+register.cc  physicalCondition.cc
test/: CMakeLists.txt  Quarantine.cc  TestMain.cc  UnitTestCommon.h  test1.cc
